# 2D-Platformer

./: .gitmodules  CMakeLists.txt  README.md
include/: AssertManager.h  Collision.h  Entity.h  Game.h  ObjectSpawner.h  Player.h  RenderWindow.h
src/: AssertManager.cpp  Entity.cpp  Game.cpp  Main.cpp  ObjectSpawner.cpp  Player.cpp  RenderWindow.cpp
